--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,16 @@
         android:supportsRtl="true"
         android:name=".FirebaseUsage"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Login" />
         <activity android:name=".Register"/>
-        <activity android:name=".MainMenu"/>
+        <activity android:name=".MainActivity"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
