--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.firebaseui:firebase-ui-database:2.1.0'
     implementation 'com.firebase:firebase-client-android:2.3.1'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
