--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,14 @@
         <activity android:name=".Instructions" />
         <activity android:name=".InstructionsSliderAdapter" />
         <activity android:name=".result" />
-        <activity android:name=".MainMenu">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
+        <activity android:name=".MainMenu" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity" />
         <activity android:name=".CategorySelect" />
